--- a/new1.html
+++ b/new1.html
@@ -11,7 +11,7 @@
 	<address> 
 	г. Мядель <br>	Ул. Комсомольская
 	<br>
-	Email: <a> mimm@mail.ru </a>
+	Email: <a> mmm@mail.ru </a>
 	</address>
 
 	</body> 
